--- a/3_Data Wrangling.ipynb
+++ b/3_Data Wrangling.ipynb
@@ -5,7 +5,7 @@
    "id": "459eac13",
    "metadata": {},
    "source": [
-    "# CHAPTER - 3 Data Wrangling"
+    "# CHAPTER - 3: Data Wrangling"
    ]
   },
   {
