--- a/4_Handling Numerical Data.ipynb
+++ b/4_Handling Numerical Data.ipynb
@@ -5,7 +5,7 @@
    "id": "f7f5870e",
    "metadata": {},
    "source": [
-    "# CHAPTER-4 Handling Numerical Data"
+    "# CHAPTER - 4: Handling Numerical Data"
    ]
   },
   {
